Use portable effect scaling